# pyOnlineSpreadSheetEditing

./: .gitignore  .project  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
jp/: widgets.py
onlinespreadsheet/: editconfig.py  gsimport.py  gsimport_cmd.py  loginBlueprint.py  pareto.py  profile.py  propertySelector.py  record_sync.py  record_sync_view.py  spreadsheet.py  spreadsheet_view.py  tableediting.py  tablequery.py  tablerowselector.py  version.py  wdgrid.py  webserver.py  wikidata.py  wtformsutil.py
onlinespreadsheet/qres/: Q1667921aggregate Query.xlsx  Q29642950aggregate Query.xlsx  Q44aggregate Query.html  Q44aggregate Query.xlsx  Q44count Query.xlsx  Q44naive Query.xlsx  Q5107aggregate Query.latex  Q8063aggregate Query.xlsx  Q8063property Query.json
scripts/: blackisort  gsimport  installAndTest  run  test
search/: search_index.json
sl/: googlesheet.py  gsjp.py  gsobserver.py  jptest.py
spreadsheet/: spreadsheet.py  tableediting.py  tablequery.py  webserver.py
templates/: userForm.html  users.html
templates/fb4common/: base.html
templates/ose/: editconfigs.html  generic500.html  home.html  ps.html  ttform.html  wikiedit.html
templates/profile/: profile.html
tests/: basetest.py  testGoogleSpreadsheet.py  testPareto.py  test_Pareto.py  test_RecordSync.py  test_WebServer.py  test_WikiData.py  test_editconfig.py  test_loginBluePrint.py  test_profile.py  test_record_sync.py  test_spreadsheet.py  test_spreadsheetRoundTrip.py  test_tableQuery.py  test_tableediting.py  test_wdsearch.py
wd/: RecordSync.py  gsimport.py  gsobserver.py  jptest2.py  querydisplay.py  wdbrowser.py  wdgrid.py  wdsearch.py
wd/resources/: wdprops.json
wd2023/: gsimport.py
