# see https://flit.pypa.io/en/latest/pyproject_toml.html
[build-system]
#requires = ["flit_core >=3.2,<4"]
#build-backend = "flit_core.buildapi"
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyOnlineSpreadSheetEditing"
authors = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  { name = "Wolfgang Fahl", email = "wf@bitplan.com" },
]
readme = "README.md"
# flit_core.config.ConfigError: license field should be <class 'dict'>, not <class 'str'>
license= "Apache-2.0"
dependencies = [
  # https://pypi.org/project/pybasemkit/
  # https://github.com/WolfgangFahl/pybasemkit
  # Python base module kit: YAML/JSON I/O, structured logging, CLI tooling, shell execution, and remote pydevd debug support.
  "pybasemkit>=0.0.3",
  # https://pypi.org/project/py-3rdparty-mediawiki/
  'py-3rdparty-mediawiki>=0.15.4',
  # https://pypi.org/project/python-dateutil/
  "python-dateutil",
  # https://pypi.org/project/pyGenericSpreadSheet/
  "pyGenericSpreadSheet>=0.5.0",
  # https://pypi.org/project/ngwidgets/
  "ngwidgets>=0.27.1"
]


requires-python = ">=3.10"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version", "description"]
[tool.hatch.version]
path = "onlinespreadsheet/__init__.py"

[project.urls]
Home = "https://github.com/WolfgangFahl/pyOnlineSpreadSheetEditing"
Documentation = "https://wiki.bitplan.com/index.php/PyOnlineSpreadSheetEditing"
Source = "https://github.com/WolfgangFahl/pyOnlineSpreadSheetEditing"


[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
only-include = ["onlinespreadsheet"]

[tool.hatch.build.targets.wheel.sources]
"onlinespreadsheet" = "onlinespreadsheet"

[project.scripts]
gsimport = "onlinespreadsheet.gsimport_cmd:main"
